Bug 1742039 - Make `IMContextWrapper::OnSelectionChange()` not call `ResetIME()` if selection range is expected one r=m_kato

Some IME of fcitx and fcitx5 have a mode to disable preedit.  This works
similar to dead key typing on Windows.  I.e., there is an "invisible"
composing text, and only commit string is inserted directly.

After bug 1712269, we don't use a set of composition events for direct
commit from IME because of web-compat.  Therefore, `IMEContentObserver`
cannot know whether the insert is caused by composition or not in this
case.

Additionally, the commit of the IME may be triggered by a key press
for next word.  Therefore, we shouldn't call `ResetIME()` from
`OnSelectionChange()` in this case.

Fortunately, we've already have selection cache which is expected by
IME after dispatching a commit event, and if the actual selection is
same as expected one, IME shouldn't require explicit reset.  Therefore,
this patch makes `OnSelectionChange()` check whether selection is
actually changed, and stop calling `ResetIME()` if selection is not
changed.

Differential Revision: https://phabricator.services.mozilla.com/D132540